# hakaton-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  chat-docs.md  example.env  pyproject.toml
core/apps/accounts/: admin.py  api.py  apps.py  backend.py  factories.py  forms.py  manager.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  urls.py  utils.py  validators.py
core/apps/analytics/: api.py  apps.py  models.py  schema.py  serializers.py  urls.py  utils.py
core/apps/articles/: admin.py  api.py  apps.py  factories.py  models.py  permissions.py  schema.py  serializers.py  signals.py  urls.py
core/apps/blacklist/: admin.py  api.py  apps.py  factories.py  forms.py  models.py  permissions.py  schema.py  serializers.py  urls.py
core/apps/brand/: admin.py  api.py  apps.py  factories.py  forms.py  mixins.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  urls.py  utils.py  viewsets.py
core/apps/chat/: admin.py  api.py  apps.py  consumers.py  exceptions.py  factories.py  forms.py  middleware.py  mixins.py  models.py  permissions.py  routing.py  schema.py  serializers.py  tasks.py  urls.py  utils.py
core/apps/cities/: api.py  apps.py  factories.py  schema.py  serializers.py  urls.py
core/apps/payments/: admin.py  api.py  apps.py  factories.py  forms.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  urls.py
core/apps/questionnaire/: api.py  apps.py  models.py  schema.py  serializers.py  urls.py
core/common/: admin.py  exceptions.py  factories.py  utils.py  validators.py
core/config/: asgi.py  celery.py  prod_settings.py  settings.py  urls.py  wsgi.py
core/utils/: admin.py  validators.py
docker-compose/: app.yml  celery.yml  example.env  storages.yml
telegram_bot/: bot.py  conf.py  handlers.py  send_request.py  utils.py
tests/: factories.py  mixins.py  utils.py
tests/accounts/: test_reg_auth.py
tests/blacklist/: test_blacklist_delete.py  test_blacklist_list.py
tests/brand/: test_brand.py  test_collaboration.py  test_delete.py  test_instant_coop.py  test_like.py  test_liked_by.py  test_my_likes.py  test_my_matches.py  test_recommended_brands.py  test_statistics.py  test_update.py
tests/chat/: test_auth_middleware.py  test_chat.py
tests/payments/: test_subscription.py
tests/tariffs/: test_gift_promocodes.py  test_promocodes.py  test_tariffs.py
(+180 files in other folders)
