[tool.poetry]
name = "w2w"
version = "0.1"
description = ""
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
drf-spectacular = "^0.27.2"
pillow = "^10.3.0"


[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
