[tool.poetry]
name = "w2w"
version = "0.1"
description = ""
authors = ["posholokia <ilya.posholokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.1"
gunicorn = "^22.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
drf-spectacular = "^0.27.2"
pillow = "^10.3.0"
redis = "^5.0.5"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
channels = {version = "4.1.0", extras = ["daphne"]}
djangochannelsrestframework = "^1.2.0"
channels-redis = "^4.2.0"
pyjwt = "^2.8.0"
dj-database-url = "^2.3.0"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
django-cities-light = "^3.10.1"
python-dateutil = "^2.9.0.post0"
django-cleanup = "^9.0.0"
python-magic = "^0.4.27"
celery = "^5.5.1"
django-tinymce = "^4.1.0"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"


[tool.poetry.group.prod.dependencies]
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.9"
python-magic-bin = "^0.4.14"



[tool.poetry.group.win.dependencies]
python-magic-bin = "^0.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
